# dante-llm

./: README.md  pyproject.toml
dantetool/: README.md  __init__.py  common.py  concat.py  gemini.py  main.py  option.py  pickup.py  redo.py  replace.py  strip.py
dantetool/commands/: compare.py  fix.py  pickup.py  redo.py  show.py  strip.py
etymology/: Makefile  README.md  common.mk  etymology.py
etymology/comparison/: README.md
etymology/gemini1-it/: 1-error.xml  Makefile  init.xml
etymology/gemma3-it/: Makefile  init.xml
etymology/gptoss-it/: Makefile  init.xml
gallery/: Makefile  README.md  gallery.py
gallery/inferno/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md  31.md  32.md  33.md  34.md
gallery/paradiso/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md  31.md  (+2 more)
it/: .gitignore  Makefile
scripts/: common.py  gemini.py  replace.py  split.py  split3.py  translate.py
tokenize/: Makefile  README.md  analysis.md  chars.py  chars.txt  check_quotes.py  quote_cases.xml  test.py  tokenizer.py
translate/: Makefile  README.md  common.mk  compare.py  show.py  split.py  system.txt  translate.py
word/: Makefile  README.md  check.py  common.mk  compare.py  fix.py  init.py  word.py
word-tr/: README.md  common.mk  fix.py  word-tr.py
(+2068 files in other folders)
