[project]
name = "dante-llm"
version = "0.1.0"
description = "Dante's Divine Comedy translation project using LLMs"
readme = "README.md"
repository = "https://github.com/7shi/dante-llm"
requires-python = ">=3.10"
dependencies = [
    "xml7shi>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dantetool"]
