[project]
name = "dantetool"
version = "0.1.0"
description = "Dante's Divine Comedy translation project using LLMs"
readme = "README.md"
repository = "https://github.com/7shi/dante-llm"
requires-python = ">=3.10"
dependencies = [
    "llm7shi",
    "xml7shi>=0.1.0",
]

[project.scripts]
dantetool = "dantetool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dantetool"]

[tool.uv.sources]
llm7shi = { git = "https://github.com/7shi/llm7shi.git" }
